Han Mangonel increased range by 5 and crush dmg by 20 (They are credited with the trebuchet, stronger version of the catapult)
Spartan rams garrison increased to 15 (rams were first siege engines recorded  (in Assyria) soon to be adopted by sparta) Cost 400 wood no metal, crush dmg reduced by 30% build time 25 instead of 30

26.10
Spartans get 1 spartriate, 1 peroci spear pony, 4 women 1 pericoic jav and want Spartiate JR to start each game
increased amount of exp needed for spariates to promote to Olympic champ 250 from 200
spartiates added 5 sec to train time (20 instead of 15)
Perioci spearman now are spariate hoplites, start at rank 2
can unlock and train perioci skrimishers from house, p1 (30 seconds)
can unlock and train helots from house, p2 (30 seconds)
CC javilineers reduced to 8 seconds from 9 seconds
spartan phalanx arura range of 7, stackable, -2% promotion exp, .25 pierce/hack armor, 2% slower run/walk
Spartan women same wood gather rate as perioci .8, train normal time (8 seconds)
Krypteia is now aviable in Gerousia, 15% dmg Ifantry 20% more train time 
Krypteia_2 available in upped Gerousia 10% dmg Infantry 20% more train time 
Leonids aura shrunk to 30, 10%dmg own and allied infantry, +2 of each resistance, but -15% run/walk
Skiri, now are champion_infantry_swordman template, dmg reduced from 16 to 15, 4 pierce/hack resistance instead of 6, but runwalk increased to 11.5 cost 70/60/70
reset champion_infantry_spearman templace, and hero_infantry_spearman
Sparta Hero spearman dmg increased to 13/12 from 12/10, max range from 4 to 4.5, cavalry bonus from 2.5 to 3.
Spartan champ spearman dmg increased to 9.5/8.5 from 9/8, max range from 4 to 4.25, cavalry bonus from 2.5 to 2.75 added .5 hack an pierce resistance
got rid of 3rd tyrtean_paeans, added 100 wood to tyrtean_paeans_2 cost
Soldier resistance AKA battel armor increased cost to 600 of each, now is only Champions and Heroes