@@ -1,12 +1,16 @@
 {
 	"autoResearch": true,
 	"icon": "upgrade_elite.png",
-	"tooltip": "Elite units +20% training time, +25% health, +0.8 capture attack strength, +20% loot, and −30% gather speed; Healers +5 healing strength and +3 healing range; Melee unitd 10% attack damage; Ranged units −20% spread.",
+	"tooltip": "Elite units +20% training time, +25% health, +0.8 capture attack strength, +20% loot, and −30% gather speed; Healers +5 healing strength and +3 healing range; Melee unitd 15% attack damage; Ranged units −20% spread, 5% dmg and +2 range.",
 	"modifications": [
 		{ "value": "Attack/Capture/Capture", "add": 0.8 },
-		{ "value": "Attack/Melee/Damage/Hack", "multiply": 1.1, "affects": "Melee" },
-		{ "value": "Attack/Melee/Damage/Pierce", "multiply": 1.1, "affects": "Melee" },
-		{ "value": "Attack/Melee/Damage/Crush", "multiply": 1.1, "affects": "Melee" },
+		{ "value": "Attack/Melee/Damage/Hack", "multiply": 1.15, "affects": "Melee" },
+		{ "value": "Attack/Melee/Damage/Pierce", "multiply": 1.15, "affects": "Melee" },
+		{ "value": "Attack/Melee/Damage/Crush", "multiply": 1.15, "affects": "Melee" },
+		{ "value": "Attack/Ranged/Damage/Hack", "multiply": 1.05, "affects": "Ranged" },
+		{ "value": "Attack/Ranged/Damage/Pierce", "multiply": 1.05, "affects": "Ranged" },
+		{ "value": "Attack/Ranged/Damage/Crush", "multiply": 1.05, "affects": "Ranged" },
+		{ "value": "Attack/Ranged/MaxRange", "add": 2, "affects": "Ranged"  },
 		{ "value": "Attack/Ranged/Spread", "multiply": 0.8, "affects": "Ranged" },
 		{ "value": "Cost/BuildTime", "multiply": 1.2 },
 		{ "value": "Health/Max", "multiply": 1.25 },
@@ -18,6 +22,7 @@
 		{ "value": "Loot/metal", "multiply": 1.2 },
 		{ "value": "Loot/xp", "multiply": 1.2 },
 		{ "value": "ResourceGatherer/BaseSpeed", "multiply": 0.7 }
+
 	],
 	"affects": ["Elite Unit"]
 }
